[gd_scene load_steps=10 format=3 uid="uid://bb8k0son0leij"]

[ext_resource type="Script" path="res://game.gd" id="1_t34n1"]
[ext_resource type="SystemFont" uid="uid://bxvifgrbfethi" path="res://fira_font.tres" id="2_yxk3r"]
[ext_resource type="PackedScene" uid="uid://605gdswvlsf6" path="res://Player.tscn" id="3_ymqlm"]
[ext_resource type="PackedScene" uid="uid://g40iy2lruyds" path="res://Flower.tscn" id="4_2pyrn"]
[ext_resource type="PackedScene" uid="uid://c613s8gj3rnax" path="res://Root.tscn" id="5_juigs"]
[ext_resource type="Texture2D" uid="uid://cp1ac1o3m26sj" path="res://assets/sheet.png" id="6_cqal3"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_bffl3"]
scenes/1/scene = ExtResource("4_2pyrn")
scenes/2/scene = ExtResource("5_juigs")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pt78p"]
texture = ExtResource("6_cqal3")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:0/0 = 0
4:0/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_v80br"]
sources/1 = SubResource("TileSetScenesCollectionSource_bffl3")
sources/2 = SubResource("TileSetAtlasSource_pt78p")

[node name="Game" type="Node2D"]
script = ExtResource("1_t34n1")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_v80br")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 131074, 1, 1, 131074, 1, 2, 131074, 1, 3, 131074, 1, 4, 131074, 1, 65540, 131074, 1, 131076, 131074, 1, 196612, 131074, 1, 262148, 131074, 1, 327684, 131074, 1, 327683, 131074, 1, 327682, 131074, 1, 327681, 131074, 1, 327680, 131074, 1, 262144, 131074, 1, 196608, 131074, 1, 131072, 131074, 1, 65536, 131074, 1, 65537, 131074, 1, 131073, 131074, 1, 196609, 131074, 1, 262145, 131074, 1, 196610, 131074, 1, 65538, 131074, 1, 131074, 131074, 1, 262147, 131074, 1, 196611, 131074, 1, 131075, 131074, 1, 65539, 131074, 1, 262146, 131074, 1, 393216, 131074, 1, 458752, 131074, 1, 524288, 131074, 1, 524289, 131074, 1, 524290, 131074, 1, 524291, 131074, 1, 524292, 131074, 1, 524293, 131074, 1, 524294, 131074, 1, 524295, 131074, 1, 458759, 131074, 1, 393223, 131074, 1, 327687, 131074, 1, 262151, 131074, 1, 196615, 131074, 1, 131079, 131074, 1, 65543, 131074, 1, 7, 131074, 1, 6, 131074, 1, 5, 131074, 1, 65542, 131074, 1, 65541, 131074, 1, 131077, 131074, 1, 131078, 131074, 1, 196614, 131074, 1, 262149, 131074, 1, 262150, 131074, 1, 327686, 131074, 1, 327685, 131074, 1, 393221, 131074, 1, 458757, 131074, 1, 458758, 131074, 1, 393222, 131074, 1, 196613, 131074, 1, 458756, 131074, 1, 393220, 131074, 1, 393219, 131074, 1, 458755, 131074, 1, 393218, 131074, 1, 458753, 131074, 1, 393217, 131074, 1, 458754, 131074, 1, 8, 131074, 1, 65544, 131074, 1, 131080, 131074, 1, 196616, 131074, 1, 262152, 131074, 1, 327688, 131074, 1, 393224, 131074, 1, 458760, 131074, 1, 524296, 131074, 1, 589824, 131074, 1, 589825, 131074, 1, 589826, 131074, 1, 589827, 131074, 1, 589828, 131074, 1, 589829, 131074, 1, 589830, 131074, 1, 589831, 131074, 1, 589832, 131074, 1, 720905, 131074, 1, 720906, 131074, 1, 720907, 131074, 1, 655371, 131074, 1, 655370, 131074, 1, 720903, 131074, 1, 720902, 131074, 1, 786431, 131074, 1, 786430, 131074, 1, 786429, 131074, 1, 720896, 131074, 1, 720897, 131074, 1, 720898, 131074, 1, 720899, 131074, 1, 720900, 131074, 1, 720901, 131074, 1, 786428, 131074, 1, 720892, 131074, 1, 720893, 131074, 1, 720894, 131074, 1, 589822, 131074, 1, 655358, 131074, 1, 655357, 131074, 1, 589821, 131074, 1, 655356, 131074, 1, 589820, 131074, 1, 524284, 131074, 1, 458748, 131074, 1, 458749, 131074, 1, 524285, 131074, 1, 524286, 131074, 1, 720904, 131074, 1, 589835, 131074, 1, 720908, 131074, 1, 655372, 131074, 1, 589836, 131074, 1, 524300, 131074, 1, 458764, 131074, 1, 393228, 131074, 1, 327692, 131074, 1, 262156, 131074, 1, 196620, 131074, 1, 131084, 131074, 1, 65548, 131074, 1, 12, 131074, 1, -65524, 131074, 1, -131060, 131074, 1, -196596, 131074, 1, -196597, 131074, 1, -196598, 131074, 1, -196599, 131074, 1, -196600, 131074, 1, -196601, 131074, 1, -196602, 131074, 1, -196603, 131074, 1, -196604, 131074, 1, -196605, 131074, 1, -196606, 131074, 1, -196607, 131074, 1, -196608, 131074, 1, -131073, 131074, 1, -131074, 131074, 1, -131075, 131074, 1, -131076, 131074, 1, -65540, 131074, 1, -4, 131074, 1, 65532, 131074, 1, 131068, 131074, 1, 196604, 131074, 1, 262140, 131074, 1, 327676, 131074, 1, 393212, 131074, 1, -65538, 131074, 1, -2, 131074, 1, 65534, 131074, 1, 131070, 131074, 1, 327678, 131074, 1, 393214, 131074, 1, 458750, 131074, 1, 262142, 131074, 1, 196606, 131074, 1, 131069, 131074, 1, 65533, 131074, 1, -3, 131074, 1, -65539, 131074, 1, 196605, 131074, 1, 327677, 131074, 1, 393213, 131074, 1, 262141, 131074, 1, -131062, 131074, 1, -65526, 131074, 1, -65525, 131074, 1, 11, 131074, 1, 65547, 131074, 1, 131083, 131074, 1, 196618, 131074, 1, 262154, 131074, 1, 327690, 131074, 1, 393226, 131074, 1, 458762, 131074, 1, 524298, 131074, 1, 524299, 131074, 1, 589834, 131074, 1, 196619, 131074, 1, 262155, 131074, 1, 327691, 131074, 1, 393227, 131074, 1, 458763, 131074, 1, 131082, 131074, 1, 65546, 131074, 1, 10, 131074, 1, -131061, 131074, 1, -131063, 131074, 1, -131064, 131074, 1, -131065, 131074, 1, -131066, 131074, 1, -131067, 131074, 1, -131068, 131074, 1, -131069, 131074, 1, -131070, 131074, 1, -131071, 131074, 1, -131072, 131074, 1, -65537, 131074, 1, -1, 131074, 1, 65535, 131074, 1, 131071, 131074, 1, 196607, 131074, 1, 262143, 131074, 1, 393215, 131074, 1, 458751, 131074, 1, 524287, 131074, 1, 327679, 131074, 1, 589823, 131074, 1, 655359, 131074, 1, 720895, 131074, 1, 655360, 131074, 1, 655361, 131074, 1, 655362, 131074, 1, 655363, 131074, 1, 655364, 131074, 1, 655365, 131074, 1, 655366, 131074, 1, 655367, 131074, 1, 655368, 131074, 1, 655369, 131074, 1, 589833, 131074, 1, 524297, 131074, 1, 458761, 131074, 1, 393225, 131074, 1, 327689, 131074, 1, 262153, 131074, 1, 196617, 131074, 1, 131081, 131074, 1, 65545, 131074, 1, 9, 131074, 1, -65527, 131074, 1, -65528, 131074, 1, -65529, 131074, 1, -65530, 131074, 1, -65531, 131074, 1, -65532, 131074, 1, -65533, 131074, 1, -65534, 131074, 1, -65535, 131074, 1, -65536, 131074, 1)
layer_1/name = "Game"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-1, 196610, 1, 65535, 196610, 1, 131071, 196610, 1, 196607, 196610, 1, 262143, 196610, 1, 327679, 196610, 1, 393215, 196610, 1, 458751, 196610, 1, 524287, 196610, 1, 589823, 196610, 1, 655359, 196610, 1, 720895, 196610, 1, 655360, 196610, 1, 655361, 196610, 1, 655362, 196610, 1, 655363, 196610, 1, 655365, 196610, 1, 655366, 196610, 1, 655367, 196610, 1, 655368, 196610, 1, 655369, 196610, 1, 589833, 196610, 1, 524297, 196610, 1, 458761, 196610, 1, 393225, 196610, 1, 327689, 196610, 1, 262153, 196610, 1, 196617, 196610, 1, 131081, 196610, 1, 65545, 196610, 1, 9, 196610, 1, -65527, 196610, 1, -65539, 196610, 1, -65538, 196610, 1, -65537, 196610, 1, -131063, 196610, 1, -131062, 196610, 1, -131061, 196610, 1, -131060, 196610, 1, -65524, 196610, 1, 12, 196610, 1, 65548, 196610, 1, 131084, 196610, 1, 196620, 196610, 1, -65526, 196610, 1, 10, 196610, 1, 65546, 196610, 1, 131082, 196610, 1, 196618, 196610, 1, 262155, 196610, 1, 327691, 196610, 1, 393227, 196610, 1, 393226, 196610, 1, 196619, 196610, 1, 131083, 196610, 1, 65547, 196610, 1, 11, 196610, 1, -65525, 196610, 1, 327690, 196610, 1, 262154, 196610, 1, 262156, 196610, 1, 327692, 196610, 1, 393228, 196610, 1, 458764, 196610, 1, 524300, 196610, 1, 458762, 196610, 1, 524298, 196610, 1, 589834, 196610, 1, 655370, 196610, 1, 655371, 196610, 1, 720907, 196610, 1, 655372, 196610, 1, 589836, 196610, 1, 458763, 196610, 1, 524299, 196610, 1, 589835, 196610, 1, 720908, 196610, 1, 720906, 196610, 1, 720905, 196610, 1, 720904, 196610, 1, 720903, 196610, 1, 720902, 196610, 1, 720901, 196610, 1, 720899, 196610, 1, 720898, 196610, 1, 786428, 196610, 1, 786429, 196610, 1, 786430, 196610, 1, 786431, 196610, 1, 720896, 196610, 1, 720897, 196610, 1, 720892, 196610, 1, 655356, 196610, 1, 589820, 196610, 1, 524285, 196610, 1, 458749, 196610, 1, 393213, 196610, 1, 589821, 196610, 1, 655357, 196610, 1, 720893, 196610, 1, 720894, 196610, 1, 655358, 196610, 1, 589822, 196610, 1, 524286, 196610, 1, 458750, 196610, 1, 393214, 196610, 1, 327678, 196610, 1, 262142, 196610, 1, 262141, 196610, 1, 327677, 196610, 1, 458748, 196610, 1, 524284, 196610, 1, 393212, 196610, 1, 327676, 196610, 1, 262140, 196610, 1, 196606, 196610, 1, 196605, 196610, 1, 196604, 196610, 1, -65540, 196610, 1, 655364, 262146, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -47.0
offset_top = 6.0
offset_right = 3.0
offset_bottom = 45.0

[node name="FlowerSeed" type="Label" parent="UI"]
layout_mode = 0
offset_left = 17.0
offset_top = -8.0
offset_right = 32.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("2_yxk3r")
text = "1"

[node name="Seed" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(3, 2)
texture = ExtResource("6_cqal3")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(72, 80)

[node name="Player" parent="." instance=ExtResource("3_ymqlm")]

[node name="LevelEditor" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextEdit" type="TextEdit" parent="LevelEditor"]
layout_mode = 0
offset_left = -50.0
offset_top = -26.0
offset_right = 25.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("2_yxk3r")
theme_override_font_sizes/font_size = 10
text = "XXXXEXXXX
.........
.........
.........
.........
...FW....
.........
...F.....
.........
....P...."
scroll_fit_content_height = true

[node name="Button" type="Button" parent="LevelEditor"]
layout_mode = 0
offset_left = -30.0
offset_top = 155.0
offset_right = 2.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 10
text = "Load"

[node name="SpinBox" type="SpinBox" parent="LevelEditor"]
layout_mode = 0
offset_left = 28.0
offset_top = -27.0
offset_right = 111.062
offset_bottom = 4.0

[connection signal="text_changed" from="LevelEditor/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="LevelEditor/Button" to="." method="_on_level_editor_button_pressed"]
[connection signal="value_changed" from="LevelEditor/SpinBox" to="." method="_on_spin_box_value_changed"]
